add: FactoryBean and XML practice

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>spring-ioc-xml-01</module>
+        <module>spring-ioc-xml-practice-02</module>
     </modules>
 
     <properties>
