--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>spring-ioc-xml-01</module>
         <module>spring-ioc-xml-practice-02</module>
+        <module>spring-ioc-annotation-03</module>
     </modules>
 
     <properties>
