Add: configuration class basic

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>spring-ioc-xml-practice-02</module>
         <module>spring-ioc-annotation-03</module>
         <module>spring-ioc-annotation-practice-04</module>
+        <module>spring-ioc-java-05</module>
     </modules>
 
     <properties>
