--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>spring-ioc-annotation-03</module>
         <module>spring-ioc-annotation-practice-04</module>
         <module>spring-ioc-java-05</module>
+        <module>spring-ioc-java-practice-06</module>
     </modules>
 
     <properties>
